--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
     "id": "circuit-maker",
-    "name": "Circuit Maker",
+    "name": "Circuit Maker TS",
     "version": "0.0.1",
     "minAppVersion": "0.12.0",
     "description": "A customizable circuit maker plugin for Obsidian.",
-    "author": "Sumeja Buljugija",
+    "author": "Sumeja",
     "authorUrl": "https://github.com/yourusername",
     "isDesktopOnly": false
   }
